# mempeep

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  coverage-report.ps1  vcpkg.json
cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt  example.cpp  log_tracer.hpp  test_log_tracer.cpp
cpp/examples/support/: buffer_reader.hpp
cpp/fixtures/: CMakeLists.txt  mock_game_data.hpp
cpp/fixtures/mempeep/test/: mock_game_data.hpp  mock_memory.hpp
cpp/include/mempeep/: address.hpp  concepts.hpp  descriptor.hpp  error.hpp  fields.hpp  layout.hpp  memory.hpp  read.hpp  tracer.hpp  tracers.hpp  traits.hpp
cpp/include/mempeep/concepts/: descriptor.hpp  fields.hpp  primitive.hpp  tracer.hpp
cpp/include/mempeep/detail/: member_traits.hpp  traits.hpp
cpp/include/mempeep/tracers/: error_tracer.hpp  log_tracer.hpp  ok_tracer.hpp
cpp/mempeep/: D.hpp  T.hpp
cpp/mempeep/D/: field_type.hpp  member_ptr_type.hpp
cpp/test/: CMakeLists.txt  example.cpp  example.hpp  example_D.hpp  test_D.cpp  test_D_field_type.cpp  test_D_member_ptr_type.cpp  test_concept_tracers.cpp  test_concepts_address_header.cpp  test_concepts_address_static.cpp  test_concepts_descriptor_header.cpp  test_concepts_fields_header.cpp  test_concepts_fields_item_header.cpp  test_concepts_memory_header.cpp  test_concepts_memory_static.cpp  test_concepts_primitive_header.cpp  test_concepts_tracer_header.hpp  test_descriptor_header.cpp  test_detail_member_traits_header.cpp  test_error_header.cpp  test_example.cpp  test_fields_header.cpp  test_header_address.cpp  test_header_layout.cpp  test_header_memory.cpp  test_header_read.cpp  test_header_tracer.cpp  test_header_tracers.cpp  test_header_traits.cpp  test_layout.cpp  test_memory.cpp  test_memory_static.cpp  test_read.cpp  test_read_header.cpp  test_read_remote.cpp  test_static_address.cpp  test_static_descriptor.cpp  test_static_layout.cpp  test_static_memory.cpp  test_static_traits.cpp  (+3 more)
cpp/test/support/: mock_game.hpp  mock_game_data.hpp  mock_memory.hpp
lua/: test.lua
lua/mempeep/: D.lua  T.lua  compute.lua  decoder.lua  descriptor.lua  error.lua  init.lua  printer.lua  read.lua  reader.lua  schema.lua  unwrapper.lua
lua/test/: test_D.lua  test_T.lua  test_compute.lua  test_decoder.lua  test_descriptor.lua  test_printer.lua  test_reader.lua  test_schema.lua  test_unwrapper.lua
